# Advent-Of-Code

./: README.md
2015/04/: main.php
2015/05/: Cargo.toml
2015/05/src/: main.rs
2015/06/: CMakeLists.txt  Makefile
2015/06/src/: main.c
2015/aoc07/: Gate.cs  GateStore.cs  Program.cs
2015/aoc08/: Program.cs
2015/aoc09/: Graph.cs  Node.cs  Program.cs
2015/aoc09/.zed/: debug.json
2015/aoc10/: Program.cs
2015/aoc11/: Program.cs
2015/aoc12/: Program.cs
2015/aoc13/: Graph.cs  Program.cs
2015/aoc14/: Calendar.cs  IEvent.cs  Program.cs  Reindeer.cs
2022/01/: main.cpp
2022/02/: main.cpp
2022/03/: main.cpp
2022/04/: main.cpp
2022/05/: main.cpp
2024/01/: Cargo.toml
2024/01/src/: main.rs
2024/02/: Cargo.toml
2024/02/src/: main.rs
2024/04/: Cargo.toml
2024/04/src/: main.rs
2024/06/: .gitignore  go.mod  in  main.go
2024/07/: Cargo.toml
2024/07/src/: main.rs
2024/08/: Cargo.toml
2024/08/src/: main.rs
2024/09/: Cargo.toml
2024/09/src/: main.rs
2024/10/: Cargo.toml
2024/10/src/: main.rs
2024/11/: main.hs
2024/11/part2/: CMakeLists.txt  Makefile
2024/12/: Cargo.toml
2024/14/: CMakeLists.txt
2024/14/src/: main.c
2024/15/: Cargo.toml
2025/aoc01/: .gitignore  gleam.toml  manifest.toml
2025/aoc02/: aoc02  gleam.toml
2025/aoc03/: gleam.toml
2025/aoc04/: gleam.toml
2025/aoc05/: gleam.toml  manifest.toml
2025/aoc06/: gleam.toml
2025/aoc07/: gleam.toml
2025/aoc08/: gleam.toml
2025/aoc09/: gleam.toml
2025/aoc10/: gleam.toml
2025/aoc11/: gleam.toml
2025/aoc12/: README.md  gleam.toml
(+16 files in other folders)
